fix: align variables with properties

--- a/projects/angular/src/popover/signpost/_properties.signpost.scss
+++ b/projects/angular/src/popover/signpost/_properties.signpost.scss
@@ -4,42 +4,37 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 @use '../../utils/mixins';
-@use '../../utils/variables/variables';
-@use 'variables.signpost' as signpost-variables;
-
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('signpost.properties') {
-  @if variables.$clr-use-custom-properties == true {
-    :root {
-      // Usage: ../signpost/_signpost.clarity.scss
-      --clr-signpost-content-color: #{tokens.$cds-alias-typography-color-400};
-      --clr-signpost-content-bg-color: #{tokens.$cds-alias-object-container-background};
-      --clr-signpost-content-border-color: #{tokens.$cds-alias-object-interaction-border-color};
+  :root [cds-theme] {
+    // Usage: ../signpost/_signpost.clarity.scss
+    --clr-signpost-content-color: #{tokens.$cds-alias-typography-color-400};
+    --clr-signpost-content-bg-color: #{tokens.$cds-alias-object-container-background};
+    --clr-signpost-content-border-color: #{tokens.$cds-alias-object-interaction-border-color};
 
-      --clr-signpost-action-icon-size: #{tokens.$cds-global-space-9}; // to be removed when shim is fully integrated
-      --clr-signpost-action-color: #{tokens.$cds-alias-object-interaction-color};
-      --clr-signpost-action-icon-color: var(--clr-signpost-action-color);
-      --clr-signpost-action-hover-color: #{tokens.$cds-alias-object-interaction-color-hover};
-      --clr-signpost-action-active-color: #{tokens.$cds-alias-object-interaction-color-active};
+    --clr-signpost-action-icon-size: #{tokens.$cds-global-space-9}; // to be removed when shim is fully integrated
+    --clr-signpost-action-color: #{tokens.$cds-alias-object-interaction-color};
+    --clr-signpost-action-icon-color: var(--clr-signpost-action-color);
+    --clr-signpost-action-hover-color: #{tokens.$cds-alias-object-interaction-color-hover};
+    --clr-signpost-action-active-color: #{tokens.$cds-alias-object-interaction-color-active};
 
-      --clr-signpost-border-radius: #{tokens.$cds-alias-object-border-radius-100};
-      // NOTE: I had to use hardcoded border size value in order to avoid sass variables
-      --clr-signpost-border-size: #{tokens.$cds-global-space-6}; // ATM remove ???
+    --clr-signpost-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    // NOTE: I had to use hardcoded border size value in order to avoid sass variables
+    --clr-signpost-border-size: #{tokens.$cds-global-space-6}; // ATM remove ???
 
-      --clr-signpost-pointer-border: var(--clr-signpost-border-size) solid var(--clr-signpost-content-border-color);
-      --clr-signpost-pointer-psuedo-border: var(--clr-signpost-border-size) solid var(--clr-signpost-content-bg-color);
-      --clr-signpost-pointer-invisible-border: #{signpost-variables.$clr-signpost-pointer-invisible-border};
+    --clr-signpost-pointer-border: var(--clr-signpost-border-size) solid var(--clr-signpost-content-border-color);
+    --clr-signpost-pointer-invisible-border: var(--clr-signpost-border-size) solid transparent;
+    --clr-signpost-pointer-psuedo-border: var(--clr-signpost-border-size) solid var(--clr-signpost-content-bg-color);
 
-      // ATM remove ???
-      --clr-signpost-content-close-button-line-height: 0; // ATM - set as default ???
-      --clr-signpost-content-close-button-size: #{tokens.$cds-global-space-7}; // ATM - set as default
-      --clr-signpost-content-close-icon-size: #{tokens.$cds-global-space-7}; // ATM - set as default
-      --clr-signpost-padding: #{tokens.$cds-global-space-7}; // ATM - set as default
-      --clr-signpost-gap-size: #{tokens.$cds-global-space-5}; // ATM - set as default
+    // ATM remove ???
+    --clr-signpost-content-close-button-line-height: 0; // ATM - set as default ???
+    --clr-signpost-content-close-button-size: #{tokens.$cds-global-space-7}; // ATM - set as default
+    --clr-signpost-content-close-icon-size: #{tokens.$cds-global-space-7}; // ATM - set as default
+    --clr-signpost-padding: #{tokens.$cds-global-space-7}; // ATM - set as default
+    --clr-signpost-gap-size: #{tokens.$cds-global-space-5}; // ATM - set as default
 
-      // --clr-signpost-content-header-position: absolute; old value
-      --clr-signpost-content-header-position: static;
-    }
+    // --clr-signpost-content-header-position: absolute; old value
+    --clr-signpost-content-header-position: static;
   }
 }
