--- a/projects/angular/src/popover/signpost/_signposts.clarity.scss
+++ b/projects/angular/src/popover/signpost/_signposts.clarity.scss
@@ -161,7 +161,7 @@
           variables.$clr-use-custom-properties
         );
 
-        bottom: -1 * signpost-variables.$clr-signpost-border-size;
+        bottom: calc(-1 * signpost-variables.$clr-signpost-border-size);
 
         &:before {
           @include mixins.css-var(
@@ -269,7 +269,7 @@
           variables.$clr-use-custom-properties
         );
 
-        top: -1 * signpost-variables.$clr-signpost-border-size;
+        top: calc(-1 * signpost-variables.$clr-signpost-border-size);
 
         &:before {
           @include mixins.css-var(
@@ -331,7 +331,7 @@
             variables.$clr-use-custom-properties
           );
 
-          right: -1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_1px;
+          right: calc(-1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_1px);
         }
       }
     }
@@ -380,7 +380,7 @@
           variables.$clr-use-custom-properties
         );
 
-        right: -1 * signpost-variables.$clr-signpost-border-size;
+        right: calc(-1 * signpost-variables.$clr-signpost-border-size);
 
         &:before {
           @include mixins.css-var(
@@ -416,7 +416,7 @@
             variables.$clr-use-custom-properties
           );
 
-          top: -1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_1px;
+          top: calc(-1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_1px);
           right: variables.$clr_baselineRem_2px;
         }
       }
@@ -442,7 +442,7 @@
           );
 
           top: variables.$clr_baselineRem_1px;
-          left: -1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_2px;
+          left: calc(-1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_2px);
         }
       }
     }
@@ -471,7 +471,7 @@
           );
 
           top: variables.$clr_baselineRem_1px;
-          left: -1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_2px;
+          left: calc(-1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_2px);
         }
       }
     }
@@ -492,7 +492,7 @@
           variables.$clr-use-custom-properties
         );
 
-        left: -1 * signpost-variables.$clr-signpost-border-size;
+        left: calc(-1 * signpost-variables.$clr-signpost-border-size);
 
         &:before {
           @include mixins.css-var(
@@ -530,7 +530,7 @@
             variables.$clr-use-custom-properties
           );
 
-          top: -1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_1px;
+          top: calc(-1 * signpost-variables.$clr-signpost-border-size - variables.$clr_baselineRem_1px);
         }
       }
     }
